trunk/Archive2/60/5669298b93c399/output
main.cpp: In instantiation of 'constexpr short unsigned int short_value_check() [with long unsigned int V = 0ul; char ...Cs = {'7', '0', '0', '0', '0'}]':
main.cpp:39:40:   required from 'constexpr short unsigned int operator"" _us() [with char ...Cs = {'7', '0', '0', '0', '0'}]'
main.cpp:46:14:   required from here
main.cpp:21:5: error: static assertion failed: asdf
     static_assert(short_value<V, Cs...>() < 65536u, "asdf");                      
     ^
